src/objects/Push_Notification_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Enable_Push_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, push notifications will be sent for any new game</description>
        <label>Enable Push Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Secret__c</fullName>
        <label>Master Secret</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Push Notification Setting</label>
</CustomObject>